# ProyectoCleanArchitecture

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .importlinter  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_applied_changes.py
backend/src/: main.py
backend/src/application/dto/: add_observation_dto.py  attach_evidence_dto.py  audit_dto.py  auth_dto.py  create_inspection_dto.py  edit_inspection_dto.py  get_inspection_dto.py  list_inspections_dto.py  submit_inspection_dto.py  sync_dto.py
backend/src/application/ports/: audit_repository.py  auth_context.py  changeset_repository.py  conflict_repository.py  file_storage_gateway.py  inspection_repository.py  password_hasher.py  queue_gateway.py  token_provider.py  unit_of_work.py  user_repository.py
backend/src/application/use_cases/: add_observation.py  apply_changes_batch.py  attach_evidence.py  create_inspection.py  edit_inspection.py  get_audit_trail.py  get_inspection.py  list_inspections.py  login.py  resolve_conflict.py  submit_inspection.py
backend/src/config/: settings.py
backend/src/domain/: events.py  exceptions.py
backend/src/domain/entities/: evidence.py  inspection.py  observation.py  user.py
backend/src/domain/policies/: conflict.py
backend/src/domain/value_objects/: ids.py  inspection_status.py  version.py
backend/src/infrastructure/auth/: jwt_auth_context.py  jwt_provider.py  password_hasher.py
backend/src/infrastructure/clock/: __init__.py  system_clock.py
backend/src/scripts/: seed.py
backend/tests/unit/: conftest.py
(+82 files in other folders)
